welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:38: error: too many arguments for method dam: ()Unit
dam(3)
   ^