welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
def faireV()
{
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	recule()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	
}
def depCinq()
{
	avance()
	avance()
	avance()
	avance()
	avance()
}
def dam()
{
	for(i<- 1 to 4){
	faireV()
	}
	depCinq()
}	

override def run() {
dam(3)
}

	
